Fix: overflow of header on really small screens

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -62,3 +62,14 @@ body {
 .animate-blink {
   animation: blink 1.5s infinite;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
